test/subjects/errors/break_outer.php
<?php

	break $x; // { Error: Cannot break/continue 1 levels }

?>
